--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <div id="top">
             <div class="rel_hint">enter productions to expand, e.g. "E1364 E1210"</div>
             <input id="prods" size="50"/>
+            <input id="depth" size="3"/>
             <button id='plot'>plot</button>
             </br>
             <div class="rel_hint">click a node to expand or collapse it, or use these buttons</div>
@@ -16,8 +17,8 @@
         </div>
         <div id="body">
         </div>
-        <script src="http://d3js.org/d3.v2.js"></script>
-        <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.3.min.js"></script>
+        <script src="d3.v2.min.js"></script>
+        <script src="jquery.min.js"></script>
         <script src="productions.js"></script>
         <script src="index.js"></script>
   </body>
