--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     </head>
     <body>
         <div id="top">
-            <div class="rel_hint">enter productions to expand, e.g. "E1364 E1210"</div>
-            <input id="prods" size="50"/>
-            <input id="depth" size="3"/>
-            <button id='plot'>plot</button>
-            </br>
-            <div class="rel_hint">click a node to expand or collapse it, or use these buttons</div>
-            <button id='collapseAll'>collapse all</button>
-            <button id='expandAll'>expand all</button>
-            <button id='expandBottom'>expand bottom</button>
+            <div class="rel_hint">enter productions to expand, e.g. "E1364 E1210"
+                </br>
+                <input id="prods" size="50"/>
+                depth: 
+                <input id="depth" size="3"/>
+                <button id='plot'>plot</button>
+            </div>
+            <div class="rel_hint">click a node to expand or collapse it, or use these buttons
+                </br>
+                <button id='collapseAll'>collapse all</button>
+                <button id='expandAll'>expand all</button>
+                <button id='expandBottom'>expand bottom</button>
+            </div>
         </div>
         <div id="body">
         </div>
@@ -21,6 +25,6 @@
         <script src="jquery.min.js"></script>
         <script src="productions.js"></script>
         <script src="index.js"></script>
-  </body>
+    </body>
 </html>
 
