added interface for sent sampling

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 <button id='expandAll'>expand all</button>
                 <button id='expandBottom'>expand bottom</button>
             </div>
+            <div class="rel_hid">
+                <button id='sample'>sample</button>
+                <p id='sampledSent'> </p>
+            </div>
         </div>
         <div id="body">
         </div>
