--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </div>
             <div class="rel_hid">
                 <button id='sample'>sample</button>
+                <button id='sampleAll'>sample all</button>
                 <p id='sampledSent'> </p>
             </div>
         </div>
