--- a/index.html
+++ b/index.html
@@ -12,17 +12,27 @@
                 <input id="depth" size="3"/>
                 <button id='plot'>plot</button>
             </div>
-            <div class="rel_hint">click a node to expand or collapse it, or use these buttons
-                </br>
-                <button id='collapseAll'>collapse all</button>
-                <button id='expandAll'>expand all</button>
-                <button id='expandBottom'>expand bottom</button>
-            </div>
-            <div class="rel_hid">
-                <button id='sample'>sample</button>
-                <button id='sampleAll'>sample all</button>
-                <p id='sampledSent'> </p>
-            </div>
+            <table>
+                <tr>
+                    <td>
+                        <div class="rel_hint">click to sample a sentence
+                            </br>
+                            <button id='sample' disabled='disabled'>sample this</button>
+                            <button id='sampleAll'>sample all</button>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="rel_hint">click a node to expand or collapse it, or use these buttons
+                            </br>
+                            <button id='collapseAll'>collapse all</button>
+                            <button id='expandAll'>expand all</button>
+                            <button id='expandBottom'>expand bottom</button>
+                            <button id='onlySample'>only sample</button>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+            <p id='sampledSent'> </p>
         </div>
         <div id="body">
         </div>
