--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <script src="d3.v2.min.js"></script>
         <script src="jquery.min.js"></script>
-        <script src="grammar.js"></script>
+        <script src="parsable_grammar.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
