rewrote to allow nonterminals

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         </div>
         <script src="d3.v2.min.js"></script>
         <script src="jquery.min.js"></script>
+        <script src="grammars_base.js"></script>
+        <!--
         <script src="parsable_grammar.js"></script>
+        -->
+        <script src="eng23_grammar.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
