--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
         <script src="d3.v2.min.js"></script>
         <script src="jquery.min.js"></script>
         <script src="grammars_base.js"></script>
-        <!--
-        <script src="parsable_grammar.js"></script>
-        -->
-        <script src="eng23_grammar.js"></script>
+        <script src="grammars/eng23.js"></script>
+        <script src="grammars/mtbolt_parsable.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
