added samples and brown

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div id="top">
             <div class="rel_hint">enter productions to expand, e.g. "E1364 E1210"
                 </br>
-                <input id="prods" size="50"/>
+                <input id="prods" size="100"/>
                 depth: 
                 <input id="depth" size="3"/>
                 <button id='plot'>plot</button>
@@ -41,6 +41,7 @@
         <script src="grammars_base.js"></script>
         <script src="grammars/eng23.js"></script>
         <script src="grammars/mtbolt_parsable.js"></script>
+        <script src="grammars/brown.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
